--- a/src/components/Promo/Promo.css
+++ b/src/components/Promo/Promo.css
@@ -113,6 +113,7 @@
   line-height: 1.33;
   padding: 10px 20px;
   margin-bottom: 25px;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 768px) {
