--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -53,3 +53,12 @@
   transform: translateY(-50%);
   cursor: pointer;
 }
+
+.search-form__button:focus {
+  opacity: 0.8;
+  outline: none;
+}
+
+.search-form__button:hover {
+  opacity: 0.8;
+}
