--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -30,39 +30,45 @@
   }
 }
 
-.portfolio__links {
+.portfolio__link-list {
   margin-top: 54px;
+  padding-left: 0;
+  margin-bottom: 0;
 }
 
 @media screen and (max-width: 768px) {
-  .portfolio__links {
+  .portfolio__link-list {
     margin-top: 50px;
   }
 }
 
 @media screen and (max-width: 480px) {
-  .portfolio__links {
+  .portfolio__link-list {
     margin-top: 40px;
   }
+}
+
+.portfolio__link-item {
+  list-style-type: none;
+  border-bottom: 1px solid #E8E8E8;
+  padding-bottom: 19px;
+  padding-top: 20px;
+}
+
+.portfolio__link-item:first-of-type {
+  padding-top: 0;
+}
+
+.portfolio__link-item:last-of-type {
+  padding-bottom: 0;
+  border: none;
 }
 
 .portfolio__link {
   display: flex;
   justify-content: space-between;
-  border-bottom: 1px solid #E8E8E8;
-  padding-bottom: 19px;
-  padding-top: 20px;
   text-decoration: none;
   color: #000;
-}
-
-.portfolio__link:first-of-type {
-  padding-top: 0;
-}
-
-.portfolio__link:last-of-type {
-  padding-bottom: 0;
-  border: none;
 }
 
 .portfolio__link-title {
