--- a/src/components/Techs/Techs.css
+++ b/src/components/Techs/Techs.css
@@ -105,30 +105,35 @@
   margin: 100px 0 0 0;
   padding-left: 0;
   list-style-type: none;
-  display: flex;
+  /* display: flex;
   flex-direction: row;
   gap: 10px;
-  justify-content: center;
+  justify-content: center; */
+  display: grid;
+    grid-template-columns: repeat(7, 1fr);
+    gap: 10px;
 }
 
 @media screen and (max-width: 768px) {
   .techs__list {
+    grid-template-columns: repeat(4, 1fr);
+
     margin-top: 83px;
   }
 }
 
 @media screen and (max-width: 480px) {
   .techs__list {
-    margin-top: 50px;
+    margin: 50px auto;
+    width: 178px;
     display: grid;
-    grid-template-columns: repeat(2, 84px);
-    grid-template-rows: repeat(2, 57px);
+    grid-template-columns: repeat(2, 1fr);
     gap: 10px 10px;
   }
 }
 
 .techs__list-item {
-  width: 90px;
+  width: 100%;
   height: 60px;
   background-color: #e8e8e8;
   border-radius: 10px;
@@ -144,7 +149,6 @@
   .techs__list-item {
     font-size: 12px;
     line-height: 1.25;
-    width: 84px;
     height: 57px;
   }
 }
