--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -12,6 +12,10 @@
   margin-right: 16px;
 }
 
+.navigation__link-logged-in {
+  color: #fff;
+}
+
 .navigation__link:last-of-type {
   margin-right: 0;
 }
