--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -98,6 +98,10 @@
   color: #3456F3;
 }
 
+.register__add-link:hover {
+  opacity: .7;
+}
+
 @media screen and (max-width: 480px) {
   .register__add-link {
     font-size: 12px;
