--- a/src/components/Portfolio/Portfolio.css
+++ b/src/components/Portfolio/Portfolio.css
@@ -71,6 +71,10 @@
   color: #000;
 }
 
+.portfolio__link:hover {
+  opacity: .7;
+}
+
 .portfolio__link-title {
   font-weight: 400;
   font-size: 30px;
