--- a/src/components/Profile/Profile.css
+++ b/src/components/Profile/Profile.css
@@ -91,6 +91,14 @@
   cursor: pointer;
 }
 
+.profile__edit-submit:hover {
+  opacity: .7;
+}
+
+.profile__edit-submit_disabled {
+  color: #C2C2C2;
+}
+
 @media screen and (max-width: 768px) {
   .profile__edit-submit {
     margin-top: 194px;
@@ -114,6 +122,10 @@
   background-color: transparent;
   border: none;
   cursor: pointer;
+}
+
+.profile__logout-button:hover {
+  opacity: .7;
 }
 
 @media screen and (max-width: 480px) {
